# say_again

./: .gitignore  CMakeLists.txt  LICENSE  README.md
plans/: 2026-06-05-sticky-channel.md  2026-06-07-chip-editor-discussion.md  2026-06-17-chip-editor.md  2026-06-17-decoder-ring-migration.md  2026-07-02-fade-slide-deform.md  2026-07-02-pie-ui-theme-consumer.md  2026-07-02-pop-scale-deform.md
src/: Channels.h  ChatLinks.cpp  ChatLinks.h  ChipResolve.cpp  ChipResolve.h  ChipTextEdit.cpp  ChipTextEdit.h  DecoderClient.cpp  DecoderClient.h  DecoderRingApi.h  FloatingIcon.cpp  FloatingIcon.h  GW2API.cpp  GW2API.h  LinkResolve.cpp  LinkResolve.h  MapData.h  Messages.cpp  Messages.h  PieTheme.cpp  PieTheme.h  SharedState.h  WaypointData.h  dllmain.cpp  sa_icon.h
